# cullify

./: .env.example  .gitignore  DESIGN.md  IMAGE_PROCESSING_PLAN.md  PROJECT_PLAN.md  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json  prisma.config.ts
apps/image_processor/: .env.example  README.md  pyproject.toml
apps/image_processor/src/: __init__.py  config.py  main.py  worker.py
apps/image_processor/src/cullify_worker/: __init__.py  __main__.py  config.py  database.py
apps/image_processor/src/cullify_worker/processing/: pipeline.py
apps/image_processor/src/db/: __init__.py  session.py
apps/image_processor/src/db/models/: __init__.py  batch.py  enums.py  image.py  image_quality_analysis.py
apps/image_processor/src/db/repositories/: __init__.py  batch_repo.py  image_quality_analysis_repo.py  image_repo.py
apps/image_processor/src/mq/: __init__.py  consumer.py  message_types.py
apps/image_processor/src/processing/: batch_loader.py  pipeline.py
apps/image_processor/src/processor/: __init__.py  batch_loader.py  image_downloader.py  pipeline.py
apps/image_processor/src/processor/quality/: __init__.py  analyzer.py  blur.py  compression.py  exposure.py
apps/image_processor/src/storage/: __init__.py  r2_client.py
apps/image_processor/tests/: test_blur.py  test_compression.py  test_exposure.py  test_placeholder.py
apps/web/: .env.example  .gitignore  DESIGN.md  README.md  package-lock.json  package.json
apps/web/prisma/: schema.prisma
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/components/landing/: benefits-section.tsx  button-link.tsx  content.ts  faq-section.tsx  features-section.tsx  final-cta-section.tsx  footer.tsx  hero-mockup.tsx  hero-section.tsx  logo.tsx  (+9 more)
src/hooks/: use-create-upload-session.ts  use-upload-batch.ts
src/lib/: query-keys.ts
workers/image_processor/: .env.example  .gitignore  README.md  pyproject.toml
workers/image_processor/src/cullify_worker/: __main__.py  config.py  jobs.py  worker.py
workers/image_processor/src/cullify_worker/processing/: batch_loader.py  pipeline.py
workers/image_processor/tests/: test_placeholder.py
(+84 files in other folders)
