[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cullify-image-worker"
version = "0.1.0"
description = "Python worker scaffold for Cullify image processing jobs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bullmq>=2.25,<3",
  "psycopg[binary]>=3.2,<4",
  "python-dotenv>=1.0,<2",
]

[project.scripts]
cullify-image-worker = "cullify_worker.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
